# snap2text

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
snap2text/: __init__.py  __main__.py
