[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "snap2text"
version = "0.2.0"
description = "Screenshot OCR tool using Gemini AI API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["screenshot", "ocr", "gemini", "ai", "clipboard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

[project.scripts]
snap2text = "snap2text.__main__:main"

[project.urls]
Homepage = "https://github.com/yourusername/snap2text"
Repository = "https://github.com/yourusername/snap2text"
Issues = "https://github.com/yourusername/snap2text/issues"
